Update Blogs(adding topic and status)